# Module33

HW/Task1/: CMakeLists.txt  main.cpp
HW/Task2/: CMakeLists.txt  main.cpp
HW/Task3/: CMakeLists.txt  main.cpp
HW/Task4/: CMakeLists.txt  main.cpp
Notes/Note1/src/: CMakeLists.txt  main.cpp
Notes/Note2/src/: CMakeLists.txt  main.cpp
Notes/Note3/: CMakeLists.txt  main.cpp
Notes/Note4/: CMakeLists.txt  main.cpp
Notes/Note5/: CMakeLists.txt  main.cpp
Notes/Note6/: CMakeLists.txt  main.cpp
